tests/_support/override/classes/error/response/CliErrorResponse.php
<?php

namespace Thirtybees\Core\Error\Response;

class CliErrorResponse extends CliErrorResponseCore
{

}
